Add latency plots for enq/deq success/failure

--- a/index.html
+++ b/index.html
@@ -125,6 +125,31 @@
 				</div>
 			</div>
 
+			<div class="row justify-content-center">
+				<div class="col-12 col-xl-6">
+					<h2>Enqueue Latency (success)</h2>
+					<div class="plot plot-latency plot-latency-enq-success" data-src="queue_op_stats"></div>
+					<hr/>
+				</div>
+				<div class="col-12 col-xl-6">
+					<h2>Enqueue Latency (failed)</h2>
+					<div class="plot plot-latency plot-latency-enq-failure" data-src="queue_op_stats"></div>
+					<hr/>
+				</div>
+			</div>
+
+			<div class="row justify-content-center">
+				<div class="col-12 col-xl-6">
+					<h2>Dequeue Latency (success)</h2>
+					<div class="plot plot-latency plot-latency-deq-success" data-src="queue_op_stats"></div>
+					<hr/>
+				</div>
+				<div class="col-12 col-xl-6">
+					<h2>Dequeue Latency (failed)</h2>
+					<div class="plot plot-latency plot-latency-deq-failure" data-src="queue_op_stats"></div>
+					<hr/>
+				</div>
+			</div>
 	    </div>
 
 
