Add plot for overall queue element throughput

--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
 					<hr/>
 				</div>
 			</div>
+
+			<div class="row justify-content-center">
+				<div class="col">
+					<h2>Overall throughput</h2>
+					<div class="plot plot-throughput" data-src="queue_op_stats"></div>
+					<hr/>
+				</div>
+			</div>
 	    </div>
 
 
