Work in plots to add successful ops ratio

--- a/index.html
+++ b/index.html
@@ -140,6 +140,19 @@
 
 			<div class="row justify-content-center">
 				<div class="col-12 col-xl-6">
+					<h2>Enqueue success ratio</h2>
+					<div class="plot plot-percent plot-ratio-enq-success" data-src="queue_op_stats"></div>
+					<hr/>
+				</div>
+				<div class="col-12 col-xl-6">
+					<h2>Dequeue success ratio</h2>
+					<div class="plot plot-percent plot-ratio-deq-success" data-src="queue_op_stats"></div>
+					<hr/>
+				</div>
+			</div>
+
+			<div class="row justify-content-center">
+				<div class="col-12 col-xl-6">
 					<h2>Dequeue Latency (success)</h2>
 					<div class="plot plot-latency plot-latency-deq-success" data-src="queue_op_stats"></div>
 					<hr/>
