Add abstract to landing page

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,18 @@
 				<div class="col">
 					<h1>AnyQ - Benchmark Suite</h1>
 					<hr/>
-					<p><i>TODO: put abstract here</i></p>
+					<p>Concurrent queue algorithms have been subject to extensive research.
+					However, the target hardware, evaluation methodology, and competing algorithms considered in the publication of any two given concurrent queue algorithms often share only minimal overlap.
+					A meaningful comparison and educated choice of queue algorithm based on the published data is, thus, exceedingly difficult.</p>
+					<p>With the continuing trend towards more and more heterogeneous systems, it is becoming more and more important to not only evaluate and compare novel and existing queue algorithms across a wide range of target architectures, but to also be able to continuously re-evaluate queue algorithms in light of novel architectures and capabilities.</p>
+
+					<p>To address this need, we present AnyQ, an evaluation framework for concurrent queue algorithms.
+					We design a set of programming abstractions that enable the mapping of concurrent queue algorithms and benchmarks to a wide variety of target architectures.
+					We demonstrate the effectiveness of these abstractions by showing that a queue algorithm expressed in a portable, high-level manner can achieve performance comparable to hand-crafted implementations.
+					We design a system for testing and benchmarking queue algorithms.</p>
+
+					<p>Using the developed framework, we investigate concurrent queue algorithm performance across a range of both CPU as well as GPU architectures.
+					In hopes that it may serve the community as a starting point for building a common repository of concurrent queue algorithms as well as base for future research, all code and data is made available as open source software to be found under <a href="https://github.com/AnyDSL/anyq" target="_blank">https://github.com/AnyDSL/anyq</a>.</p>
 				</div>
 			</div>
 
