--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,7 @@
 					<h2>Result database</h2>
 					<ul>
 						<li><a href="baseline/?queue_size=10000&block_size=32&p_enq=0-5&p_deq=0-5&workload_size=1&attempts_per_thread=20">Baseline data of all queue algorithms</a></li>
+						<li><a href="vectorization/?queue_size=10000&block_size=32&p_enq=0-5&p_deq=0-5&workload_size=1&attempts_per_thread=20">Effect of vectorization</a></li>
 						<li><a href="cuda-its/?queue_size=10000&block_size=32&p_enq=0-5&p_deq=0-5&workload_size=1&attempts_per_thread=20">Effect of Independent Thread Scheduling (ITS)</a></li>
 						<li><a href="arm-lse/?device=apple-m1-cpu&queue_type=cpcq&queue_type=msq&queue_size=10000&block_size=32&p_enq=0-5&p_deq=0-5&workload_size=1">Effect of ARM atomics (LSE)</a></li>
 					</ul>
@@ -58,6 +59,7 @@
 					<ul>
 					<li>Apple M1</li>
 					<li>AMD Ryzen 7 1700X Eight-Core Processor</li>
+					<li>AMD Ryzen 9 3900X 12-Core Processor</li>
 					<li>AMD Ryzen 9 5950X 16-Core Processor</li>
 					<li>NVIDIA GeForce GTX 1080</li>
 					<li>NVIDIA GeForce RTX 2080 SUPER</li>
