--- a/html/index.html
+++ b/html/index.html
@@ -75,6 +75,7 @@
 					<li>the queue implementation has issues running with a specific configuration on the target hardware</li>
 					</ul>
 					<!-- <hr/> -->
+					<p><i>TODO: add links/references to algorithm papers</i></p>
 					<p><i>TODO: encourage community to amend more algorithms or provide benchmark results for additional hardware</i></p>
 				</div>
 			</div>
